[gd_scene load_steps=9 format=3 uid="uid://bs6h4vg0o8ofg"]

[ext_resource type="Texture2D" uid="uid://bbs88hmpwnpbp" path="res://Images/Characters/code_green.png" id="1_2thwo"]
[ext_resource type="Script" uid="uid://dkssuqibx014x" path="res://Scenes/code_green_boss.gd" id="1_x2hyg"]
[ext_resource type="Shader" uid="uid://dqlgtuowbyn8v" path="res://Shaders/flash.gdshader" id="2_j1b4p"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5mgnq"]
resource_local_to_scene = true
shader = ExtResource("2_j1b4p")
shader_parameter/flash_color = Vector4(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_absap"]
size = Vector2(68, 68)

[sub_resource type="Animation" id="Animation_wkfnp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1etyd"]
resource_name = "default"
length = 0.3
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_et7ms"]
_data = {
&"RESET": SubResource("Animation_wkfnp"),
&"default": SubResource("Animation_1etyd")
}

[node name="CodeGreenBoss" type="Area2D"]
rotation = 3.14159
collision_layer = 2
collision_mask = 4
script = ExtResource("1_x2hyg")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_5mgnq")
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_2thwo")
hframes = 2

[node name="Hurtbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_absap")

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_et7ms")
}

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="PassiveTimer" type="Timer" parent="."]
wait_time = 0.7

[node name="AfterImageTimer" type="Timer" parent="."]
wait_time = 0.02

[node name="HPTransform2D" type="RemoteTransform2D" parent="."]
update_rotation = false

[node name="StatusTransform2D" type="RemoteTransform2D" parent="."]
update_rotation = false

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="PassiveTimer" to="." method="_on_passive_timer_timeout"]
[connection signal="timeout" from="AfterImageTimer" to="." method="_on_after_image_timer_timeout"]
